--- a/vars.yml
+++ b/vars.yml
@@ -2,6 +2,6 @@ timezone: "Europe/Moscow"
 
 db_name: <db_name>
 db_user: <db_user>
-db_passwordd: <db_password>
+db_password: <db_password>
 ssh_port: <ssh_port>
 psql_port: <psql_port>
